--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,39 +1,29 @@
-<div class = "block">
-      <nav class = "nav is-primary">
-            <div class = "nav-left">
-                  <a class = "nav-item">
-                    <h1 class = "title is-6">
-                      <i class="fa fa-home"></i>
-                      Home
-                    </h1>
-                  </a>
-                  <a class ="nav-item">
-                    <h1 class = "title is-6">
-                      Articles
-                    </h1>
-                  </a>
-                  <a class = "nav-item">
-                    <h1 class = "title is-6">
-                      Posts
-                    </h1>
-                  </a>
-
-            </div>
-            <div class = "nav-center">
-                  <a class = "nav-item">
-                    <h1 class = "title is-5">
-                      My Flask App
-                    </h1>
-                  </a>
-                    </div>
-            <div class = "nav-right">
-              <p>
-                  
-                        <a class = "button is-outlined loginbutton">
-                          Login
-                        </a>
-                    
-                    </p>
-                    </div>
-                  </nav>
-                </div>
+<div class="block">
+  <nav class="nav">
+    <div class="nav-left">
+      <a href="#" class="nav-item">
+        Home
+      </a>
+      <a href="#" class="nav-item">
+        Articles
+      </a>
+      <a href="#" class="nav-item">
+        Posts
+      </a>
+    </div>
+    <div class="nav-cen"></div>
+    <div class="nav-right">
+      <a href="#" class="nav-item">
+        <button class="button is-primary">
+          Login
+        </button>
+      </a>
+      <a href="#" class ="nav-item">
+        <button class="button is-primary is-rounded">
+          Sign Up
+        </button>
+      </a>
+    </div>
+    <!-- add a horizontal line -->
+  </nav>
+</div>
