--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,7 +1,7 @@
 <div class="block">
   <nav class="nav">
     <div class="nav-left">
-      <a href="#" class="nav-item">
+      <a href="/" class="nav-item">
         Home
       </a>
       <a href="#" class="nav-item">
@@ -13,7 +13,7 @@
     </div>
     <div class="nav-cen"></div>
     <div class="nav-right">
-      <a href="#" class="nav-item">
+      <a href="/login" class="nav-item">
         <button class="button is-primary">
           Login
         </button>
