--- a/templates/register.html
+++ b/templates/register.html
@@ -2,11 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Login</title>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.3/css/bulma.css">
-	<link rel="stylesheet" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css">
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="{{url_for('static', filename='styles/styles.css')}}">
+	<title>MyFlaskApp</title>
 </head>
 <body>
 	{% include 'includes/navbar.html' %}
@@ -16,7 +12,7 @@
          <div class="field">
 		  <!-- <label class="label is-login">Name:</label> -->
 		  <div class="control">
-		  	{{form.username(class_='input')}}
+		  	{{form.name(class_='input')}}
 		    <!-- <input class="input" type="text" placeholder="Username"> -->
 		  </div>
 		</div>
@@ -25,7 +21,28 @@
 		  <!-- <label class="label is-login">Email:</label> -->
 		  <div class="control">
 		    <!-- <input class="input" type="password" placeholder="Password"> -->
+		    {{form.username(class_="input")}}
+		  </div>
+		</div>
+		<div class="field">
+		  <!-- <label class="label is-login">Email:</label> -->
+		  <div class="control">
+		    <!-- <input class="input" type="password" placeholder="Password"> -->
+		    {{form.email(class_="input")}}
+		  </div>
+		</div>
+		<div class="field">
+		  <!-- <label class="label is-login">Email:</label> -->
+		  <div class="control">
+		    <!-- <input class="input" type="password" placeholder="Password"> -->
 		    {{form.password(class_="input")}}
+		  </div>
+		</div>
+		<div class="field">
+		  <!-- <label class="label is-login">Email:</label> -->
+		  <div class="control">
+		    <!-- <input class="input" type="password" placeholder="Password"> -->
+		    {{form.confirmPw(class_="input")}}
 		  </div>
 		</div>
 		<p class='padding-height'></p>
