--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -18,7 +18,7 @@
           Login
         </button>
       </a>
-      <a href="#" class ="nav-item">
+      <a href="/register" class ="nav-item">
         <button class="button is-primary is-rounded">
           Sign Up
         </button>
